# Fathom

./: .gitignore  Cargo.toml  PERFORMANCE_IMPROVEMENT_ANALYSIS.md  PROJECT_STRUCTURE.md  STATUS.md
RFathom/: .gitignore  C_TO_RUST_MAPPING.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md  STATUS.md
RFathom/benches/: basic.rs
RFathom/src/: bitboard.rs  encoding.rs  helper.rs  lib.rs  loader.rs  probe.rs  syzygy.rs  types.rs
RFathom/tests/: syzygy_integration.rs
benches/: attack_tables.rs  basic.rs  basic_bench.rs  bitboard_simd.rs  trivial.rs
examples/: basic.rs  helper_api.rs
src/: constants.rs  encoding.rs  helper.rs  lib.rs  loader.rs  probe.rs  syzygy.rs
tests/: syzygy_integration.rs
